<resources>
    <string name="app_name">Nubank Clone</string>

    <string name="txt_nome_usuario">Olá, Jean</string>
    <string name="txt_saldo_conta">Conta \n\nR$ 204.865,00</string>
    <string name="txt_cartoes">Meus cartões</string>
    <string name="txt_credit_card">Cartão de Crédito</string>
    <string name="txt_current_invoice">Fatura atual</string>
    <string name="txt_currency_BR">R$ 3.158,32</string>
    <string name="txt_limit_card">Limite disponível de R$ 11.652,67</string>
    <string name="txt_split_purchases">Parcelar Compras</string>
</resources>