<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Purple">

        <View
            android:id="@+id/containerCirculo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/container_circulo"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_user"
            app:layout_constraintTop_toTopOf="@id/containerCirculo"
            app:layout_constraintStart_toStartOf="@id/containerCirculo"
            app:layout_constraintEnd_toEndOf="@id/containerCirculo"
            app:layout_constraintBottom_toBottomOf="@id/containerCirculo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nome_usuario"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/containerCirculo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"/>

        <ImageView
            android:id="@+id/icEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            android:layout_marginStart="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@id/containerCirculo"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/icQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_help_outline_white_24"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@id/icEye"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icPerson"/>

        <ImageView
            android:id="@+id/icPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            app:layout_goneMarginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/icQuestion"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_saldo_conta"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerIconPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_credit_card_black_24"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cartoes"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/txt_credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <TextView
        android:text="@string/txt_current_invoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/Dark_gray"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <TextView
        android:text="@string/txt_currency_BR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:text="@string/txt_limit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/Dark_gray"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <TextView
        android:text="@string/txt_split_purchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>
